check_utf8.txt
cargo :     Checking nl_llm_v2 v0.1.0 (C:\Users\Public\nas_h
ome\AI\GameEditor\NeuroLoom\crates\nl_llm_v2)
At line:1 char:1
+ cargo check -p nl_llm_v2 2>&1 | Out-File -FilePath check_u
tf8.txt -En ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking n 
   l...ates\nl_llm_v2):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `async_trait::async_trait`
 --> crates\nl_llm_v2\src\site\traits.rs:1:5
  |
1 | use async_trait::async_trait;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)
]`) on by default

warning: unused import: `Action`
 --> crates\nl_llm_v2\src\site\traits.rs:4:40
  |
4 | use crate::site::context::{UrlContext, Action};
  |                                        ^^^^^^

warning: unused imports: `HeaderMap` and `HeaderValue`
 --> crates\nl_llm_v2\src\auth\providers\gemini_cli.rs:4:48
  |
4 | use reqwest::{Client, RequestBuilder, header::{HeaderMap
, HeaderValue}};
  |                                                ^^^^^^^^^
  ^^^^^^^^^^^

error[E0053]: method `before_send` has an incompatible type 
for trait
  --> crates\nl_llm_v2\src\protocol\hooks\cloudcode.rs:29:68
   |
29 |     fn before_send(&self, _ctx: &mut PipelineContext<'_
>, mut req: RequestBuilder) -> RequestBuilder {
   |                                                        
            ^^^^^^^^^^^^^^ expected `&mut RequestBuilder`, f
ound `RequestBuilder`
   |
note: type in trait
  --> crates\nl_llm_v2\src\protocol\traits.rs:46:59
   |
46 |     fn before_send(&self, ctx: &mut PipelineContext, re
q: &mut reqwest::RequestBuilder) {
   |                                                        
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected signature `fn(&CloudCodeHook, &mut Pipel
ineContext<'_>, &mut RequestBuilder) -> ()`
              found signature `fn(&CloudCodeHook, &mut Pipel
ineContext<'_>, RequestBuilder) -> RequestBuilder`
help: change the parameter type to match the trait
   |
29 |     fn before_send(&self, _ctx: &mut PipelineContext<'_
>, mut req: &mut RequestBuilder) -> RequestBuilder {
   |                                                        
            ++++

warning: unused import: `tokio_stream::StreamExt`
 --> crates\nl_llm_v2\src\protocol\base\openai.rs:2:5
  |
2 | use tokio_stream::StreamExt;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tokio_stream::StreamExt`
 --> crates\nl_llm_v2\src\protocol\base\gemini.rs:2:5
  |
2 | use tokio_stream::StreamExt;
  |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `response`
  --> crates\nl_llm_v2\src\protocol\base\openai.rs:67:29
   |
67 |     fn unpack_stream(&self, response: reqwest::Response
) -> anyhow::Result<BoxLlmStream> {
   |                             ^^^^^^^^ help: if this is i
ntentional, prefix it with an underscore: `_response`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unus
ed)]`) on by default

For more information about this error, try `rustc --explain 
E0053`.
warning: `nl_llm_v2` (lib) generated 6 warnings
error: could not compile `nl_llm_v2` (lib) due to 1 previous
 error; 6 warnings emitted
